feat: add embark

--- a/.config/emacs/config.org
+++ b/.config/emacs/config.org
@@ -325,7 +325,9 @@ I created in ./early-init.el
 ** Minibuffer enhancements
 *** Vertico - vertical interactive completion
 #+begin_src emacs-lisp
-  (use-package marginalia)
+  (use-package marginalia
+    :config
+    (marginalia-mode))
   (use-package consult)
   (use-package vertico
     :init
@@ -567,7 +569,7 @@ I created in ./early-init.el
     (corfu-quit-at-boundary nil)   ;; Never quit at completion boundary
     (corfu-quit-no-match nil)      ;; Never quit, even if there is no match
     (corfu-preview-current nil)    ;; Disable current candidate preview
-    (corfu-preselect 'prompt)      ;; Preselect the prompt
+    (corfu-preselect 'directory)      ;; Preselect the prompt
     (corfu-on-exact-match nil)     ;; Configure handling of exact matches
     (corfu-scroll-margin 5)        ;; Use scroll margin
 
@@ -617,4 +619,39 @@ I created in ./early-init.el
                   corfu-popupinfo-delay nil)
       (corfu-mode 1)))
   (add-hook 'minibuffer-setup-hook #'corfu-enable-in-minibuffer)
+
+  (defun corfu-move-to-minibuffer ()
+    (interactive)
+    (pcase completion-in-region--data
+      (`(,beg ,end ,table ,pred ,extras)
+       (let ((completion-extra-properties extras)
+             completion-cycle-threshold completion-cycling)
+         (consult-completion-in-region beg end table pred)))))
+  (keymap-set corfu-map "M-m" #'corfu-move-to-minibuffer)
+  (add-to-list 'corfu-continue-commands #'corfu-move-to-minibuffer)
 #+END_SRC
+** Embark
+#+begin_src emacs-lisp
+  (use-package embark
+    :ensure t
+
+    :bind
+    (("C->" . embark-act)         ;; pick some comfortable binding
+     ("C-;" . embark-dwim)        ;; good alternative: M-.
+     ("C-h B" . embark-bindings)) ;; alternative for `describe-bindings'
+
+    :init
+    (setq prefix-help-command #'embark-prefix-help-command)
+    :config
+    ;; Hide the mode line of the Embark live/completions buffers
+    (add-to-list 'display-buffer-alist
+                 '("\\`\\*Embark Collect \\(Live\\|Completions\\)\\*"
+                   nil
+                   (window-parameters (mode-line-format . none)))))
+
+  ;; Consult users will also want the embark-consult package.
+  (use-package embark-consult
+    :ensure t ; only need to install it, embark loads it after consult if found
+    :hook
+    (embark-collect-mode . consult-preview-at-point-mode))
+#+end_src
