feat: add yaml mode

--- a/.config/emacs/config.org
+++ b/.config/emacs/config.org
@@ -674,3 +674,7 @@ I created in ./early-init.el
     :hook
     (prog-mode . fic-mode))
 #+end_src
+** Yaml mode
+#+begin_src emacs-lisp
+(use-package yaml-mode)
+#+end_src
