--- a/.config/emacs/config.org
+++ b/.config/emacs/config.org
@@ -22,7 +22,6 @@
   (tool-bar-mode 0)
   (menu-bar-mode 0)
   (scroll-bar-mode 0)
-  (global-hl-line-mode)
 #+End_SRC
 
 ** eshell command path
@@ -241,40 +240,40 @@ I created in ./early-init.el
 #+End_src
 ** Multiple vterm buffers
 #+begin_src emacs-lisp
-  (use-package multi-vterm
-  	:config
-  	(add-hook 'vterm-mode-hook
-  			(lambda ()
-  			(setq-local evil-insert-state-cursor 'box)
-  			(evil-insert-state)))
-  	(define-key vterm-mode-map [return]                      #'vterm-send-return)
+    (use-package multi-vterm
+    	:config
+    	(add-hook 'vterm-mode-hook
+    			(lambda ()
+    			(setq-local evil-insert-state-cursor 'box)
+    			(evil-insert-state)))
+    	(define-key vterm-mode-map [return]                      #'vterm-send-return)
 
-  	(setq vterm-keymap-exceptions nil)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-e")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-f")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-a")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-v")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-b")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-w")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-u")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-d")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-n")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-m")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-p")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-j")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-k")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-r")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-t")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-g")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-c")      #'vterm--self-insert)
-  	(evil-define-key 'insert vterm-mode-map (kbd "C-SPC")    #'vterm--self-insert)
-  	(evil-define-key 'normal vterm-mode-map (kbd "C-d")      #'vterm--self-insert)
-  	(evil-define-key 'normal vterm-mode-map (kbd ",c")       #'multi-vterm)
-  	(evil-define-key 'normal vterm-mode-map (kbd ",n")       #'multi-vterm-next)
-  	(evil-define-key 'normal vterm-mode-map (kbd ",p")       #'multi-vterm-prev)
-  	(evil-define-key 'normal vterm-mode-map (kbd "i")        #'evil-insert-resume)
-  	(evil-define-key 'normal vterm-mode-map (kbd "o")        #'evil-insert-resume)
-  	(evil-define-key 'normal vterm-mode-map (kbd "<return>") #'evil-insert-resume))
+    	(setq vterm-keymap-exceptions nil)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-e")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-f")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-a")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-v")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-b")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-w")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-u")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-d")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-n")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-m")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-p")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-j")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-k")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-r")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-t")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-g")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-c")      #'vterm--self-insert)
+    	(evil-define-key 'insert vterm-mode-map (kbd "C-SPC")    #'vterm--self-insert)
+    	(evil-define-key 'normal vterm-mode-map (kbd "C-d")      #'vterm--self-insert)
+    	(evil-define-key 'normal vterm-mode-map (kbd ",c")       #'multi-vterm)
+    	(evil-define-key 'normal vterm-mode-map (kbd ",n")       #'multi-vterm-next)
+    	(evil-define-key 'normal vterm-mode-map (kbd ",p")       #'multi-vterm-prev)
+    	(evil-define-key 'normal vterm-mode-map (kbd "i")        #'evil-insert-resume)
+    	(evil-define-key 'normal vterm-mode-map (kbd "o")        #'evil-insert-resume)
+    	(evil-define-key 'normal vterm-mode-map (kbd "<return>") #'evil-insert-resume))
 #+end_src
 ** Custom functions
 ** Kill other buffers but current one
@@ -677,4 +676,17 @@ I created in ./early-init.el
 ** Yaml mode
 #+begin_src emacs-lisp
 (use-package yaml-mode)
+#+end_src
+** Current line highlighting
+#+begin_src emacs-lisp
+  (use-package hl-line
+    :hook
+    (org-mode . hl-line-mode)
+    (prog-mode . hl-line-mode))
+#+end_src
+** Spacious padding
+#+begin_src emacs-lisp
+  (use-package spacious-padding
+    :config
+    (spacious-padding-mode 1))
 #+end_src
